test/multilocale/diten/localBlock/needMultiLocales/localBlock5.good
localBlock5.chpl:26: error: cannot access remote data in local block
